[gd_scene load_steps=6 format=3 uid="uid://brwmx3qt0or4x"]

[ext_resource type="FontFile" uid="uid://bscrgmx88wnpd" path="res://Assets/Fonts/SHPinscher-Regular.otf" id="1_rk3vk"]
[ext_resource type="Script" path="res://Scripts/pause_screen.gd" id="1_vgvnp"]
[ext_resource type="Theme" uid="uid://s00swvrkfkxc" path="res://Themes/PauseButton.tres" id="3_6g4r1"]
[ext_resource type="AudioStream" uid="uid://bb0tns1bxyp2p" path="res://Assets/Sound&Music/ding.mp3" id="4_r2gwd"]
[ext_resource type="Texture2D" uid="uid://cavidf607s7dr" path="res://Assets/Art/help.png" id="5_sjfov"]

[node name="pauseScreen" type="Node2D"]
script = ExtResource("1_vgvnp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.588235)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_top = 183.0
offset_right = 1920.0
offset_bottom = 376.0
theme_override_colors/font_color = Color(0.921569, 0.87451, 0.258824, 1)
theme_override_fonts/font = ExtResource("1_rk3vk")
theme_override_font_sizes/font_size = 160
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 799.0
offset_top = 452.0
offset_right = 1124.0
offset_bottom = 581.0
theme = ExtResource("3_6g4r1")
theme_override_fonts/font = ExtResource("1_rk3vk")
theme_override_font_sizes/font_size = 72
text = "Continue"

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_left = 799.0
offset_top = 589.0
offset_right = 1124.0
offset_bottom = 718.0
theme = ExtResource("3_6g4r1")
theme_override_fonts/font = ExtResource("1_rk3vk")
theme_override_font_sizes/font_size = 72
text = "Restart"

[node name="Button3" type="Button" parent="CanvasLayer"]
offset_left = 799.0
offset_top = 742.0
offset_right = 1124.0
offset_bottom = 871.0
theme = ExtResource("3_6g4r1")
theme_override_fonts/font = ExtResource("1_rk3vk")
theme_override_font_sizes/font_size = 72
text = "Quit :("

[node name="MusicSlider" type="HSlider" parent="CanvasLayer"]
offset_left = 42.0
offset_top = 67.0
offset_right = 205.0
offset_bottom = 83.0
scale = Vector2(2, 2)
step = 10.0
value = 100.0
rounded = true
scrollable = false
tick_count = 10
ticks_on_borders = true

[node name="SoundSlider" type="HSlider" parent="CanvasLayer"]
offset_left = 42.0
offset_top = 192.0
offset_right = 205.0
offset_bottom = 208.0
scale = Vector2(2, 2)
step = 10.0
value = 100.0
rounded = true
scrollable = false
tick_count = 10
ticks_on_borders = true

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 379.0
offset_top = 58.0
offset_right = 467.0
offset_bottom = 136.0
theme_override_fonts/font = ExtResource("1_rk3vk")
theme_override_font_sizes/font_size = 64
text = "ðŸŽµ"

[node name="Label3" type="Label" parent="CanvasLayer"]
offset_left = 379.0
offset_top = 183.0
offset_right = 467.0
offset_bottom = 261.0
theme_override_fonts/font = ExtResource("1_rk3vk")
theme_override_font_sizes/font_size = 64
text = "ðŸ”Š"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CanvasLayer" groups=["sound"]]
stream = ExtResource("4_r2gwd")
metadata/basic_db = 0.0

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 1708.0
offset_top = 38.0
offset_right = 1748.0
offset_bottom = 78.0
scale = Vector2(4, 4)
texture_normal = ExtResource("5_sjfov")

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="CanvasLayer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_texture_button_pressed"]
